Update css paths in index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- BASE FILE PATH -->
-<base href="file:///run/media/shivam/DataDrive/IIT%20Roorkee/Aalok%20misra/Website/" />
+<!-- <base href="file:///run/media/shivam/DataDrive/IIT%20Roorkee/Aalok%20misra/Website/" /> -->
 <!-- BASE FILE PATH -->
 
 <!DOCTYPE html>
@@ -9,8 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A. N. Mitra Memorial Lecture Series</title>
-    <link rel="stylesheet" href="static/css/navbar.css">
-    <link rel="stylesheet" href="static/css/home2css.css">
+    <link rel="stylesheet" href="Website/static/css/navbar.css">
+    <link rel="stylesheet" href="Website/static/css/home2css.css">
 </head>
 <body>
     
