base href added

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="background"></div>
     <nav class="navbar">
         <div class="nav-links">
-            <a href="templates/home.html" class="nav-item">Home</a>
-            <a href="templates/about.html" class="nav-item">About</a>
+            <a href="./index.html" class="nav-item">Home</a>
+            <a href="./templates/about.html" class="nav-item">About</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
@@ -27,13 +27,13 @@
             <div class="dropdown">
                 <div class="dropbtn">Schedule ▾</div>
                 <div class="dropdown-content">
-                    <a href="templates/schedule.html">Day 1</a>
-                    <a href="templates/schedule.html">Day 2</a>
-                    <a href="templates/WittenLecture.html">Ed Witten's Lecture</a>
+                    <a href="./templates/schedule.html">Day 1</a>
+                    <a href="./templates/schedule.html">Day 2</a>
+                    <a href="./templates/WittenLecture.html">Ed Witten's Lecture</a>
                 </div>
             </div>
-            <a href="templates/attendees.html" class="nav-item">Attendees</a>
-            <a href="templates/regForm.html"> <button class="register-btn">Register</button></a>
+            <a href="./templates/attendees.html" class="nav-item">Attendees</a>
+            <a href="./templates/regForm.html"> <button class="register-btn">Register</button></a>
         </div>
     </nav>
 
