--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- BASE FILE PATH -->
 <!-- <base href="file:///run/media/shivam/DataDrive/IIT%20Roorkee/Aalok%20misra/Website/" /> -->
+<base href="{{site.baseurl}}" />
 <!-- BASE FILE PATH -->
 
 <!DOCTYPE html>
@@ -98,5 +99,10 @@
             </div>
         </footer>
     </div>
+
+    <script type="text/javascript">
+        // Get the value of site.baseurl in console log 
+        console.log("site.baseurl: ", "{{site.baseurl}}");
+    </script>
 </body>
 </html>
