Changed footer, added learn more button to poster div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A. N. Mitra Memorial Lecture Series</title>
     <link rel="stylesheet" href="./static/css/navbar.css">
-    <link rel="stylesheet" href="./static/css/home2css.css">
+    <link rel="stylesheet" href="./static/css/index.css">
 </head>
 <body>
     
@@ -53,12 +53,8 @@
             <p style="font-size: 26px;">In the loving memory of Prof. A. N. Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
             <p style="font-size: 40px; font-family: Lora;">April 14<sup>th</sup>-15<sup>th</sup>, 2025</p>
             <div class="buttons">
-                <!-- <a href="/register" class="register">Register</a> -->
-                <!-- <a href="/about" target="blank" class="learn-more">Learn More</a> -->
-                <a href="./regForm.html" class="register">Meeting</a>
-                <a href="./WittenLecture.html" class="register">Lecture</a>
-                <!-- <a href="/about" target="blank" class="learn-more">Meeting</a> -->
-                <!-- <a href="/about" target="blank" class="learn-more">Lecture</a> -->
+                <a href="/register" class="type1">Meeting</a>
+                <a href="/lecture" class="type1">Lecture</a>
             </div>
         </div>
     </div>
@@ -77,6 +73,12 @@
         <div class="hero-text" style="color: white; vertical-align: top;">
             <h1 style="font-size: 50px;"> 2<sup>nd</sup> A. N. Mitra Memorial Lecture</h1>
             <p>In the loving memory of Professor Asoke Nath Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
+
+            <div class="buttons">
+                <a href="/lecture" style="margin-top: 3vw;" class="type2">Learn More</a>
+                <!-- <a href="/lecture" class="type1">Lecture</a> -->
+            </div>
+
         </div>
         <div class="circleWitten">
             <a href="templates/WittenLecture.html"><img src="static/images/lecturePoster.jpeg" alt="Professor Edward Witten"></a>
@@ -90,12 +92,15 @@
         <footer>
             <div class="footer-bottom">
                 <p>In the loving memory of Professor Asoke Nath Mitra! &nbsp; ❤️</p>
-                <div class="footer-bottom-links">
+                <!-- email llink -->
+
+                <p>For queries, contact <a href="mailto:aalok.misra@ph.iitr.ac.in">aalok.misra@ph.iitr.ac.in</a></p>
+                <!-- <div class="footer-bottom-links">
                     <a href="templates/about.html">About</a>
                     <a href="templates/schedule.html">Events</a>
                     <a href="templates/attendees.html">Attendees</a>
                     <a href="templates/regForm.html">Register</a>
-                </div>
+                </div> -->
             </div>
         </footer>
     </div>
