fixed learn more not working

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>In the loving memory of Professor Asoke Nath Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
 
             <div class="buttons">
-                <a href="/lecture" style="margin-top: 3vw;" class="type2">Learn More</a>
+                <a href="./templates/WittenLecture.html" style="margin-top: 3vw;" class="type2">Learn More</a>
                 <!-- <a href="/lecture" class="type1">Lecture</a> -->
             </div>
 
@@ -94,7 +94,7 @@
                 <p>In the loving memory of Professor Asoke Nath Mitra! &nbsp; ❤️</p>
                 <!-- email llink -->
 
-                <p>For queries, contact <a href="mailto:aalok.misra@ph.iitr.ac.in">aalok.misra@ph.iitr.ac.in</a></p>
+                <p>For queries, contact <a href="mailto:aalok.misra@ph.iitr.ac.in" style="color: cyan;">aalok.misra@ph.iitr.ac.in</a>.</p>
                 <!-- <div class="footer-bottom-links">
                     <a href="templates/about.html">About</a>
                     <a href="templates/schedule.html">Events</a>
