--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <p style="font-size: 26px;">In the loving memory of Prof. A. N. Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
             <p style="font-size: 40px; font-family: Lora;">April 14<sup>th</sup>-15<sup>th</sup>, 2025</p>
             <div class="buttons">
-                <a href="/register" class="type1">Meeting</a>
-                <a href="/lecture" class="type1">Lecture</a>
+                <a href="./index.html" class="type1">Meeting</a>
+                <a href="./templates/WittenLecture.html" class="type1">Lecture</a>
             </div>
         </div>
     </div>
