updated index.html footer

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!-- Footer -->
         <footer>
             <div class="footer-bottom">
-                <p>In the loving memory of Professor Asoke Nath Mitra! &nbsp; ❤️</p>
+                <p>In the loving memory of Professor Asoke Nath Mitra.</p>
                 <!-- email llink -->
 
                 <p>For queries, contact <a href="mailto:aalok.misra@ph.iitr.ac.in" style="color: cyan;">aalok.misra@ph.iitr.ac.in</a>.</p>
