--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
         <div class="nav-links">
             <a href="./index.html" class="nav-item">Home</a>
-            <a href="./templates/about.html" class="nav-item">About</a>
+            <a href="./templates/about.html" class="nav-item">Prof. A. N. Mitra</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
