--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <base href="{{site.baseurl}}" />
 <!-- BASE FILE PATH -->
 
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A. N. Mitra Memorial Lecture Series</title>
-    <link rel="stylesheet" href="./static/css/navbar.css">
-    <link rel="stylesheet" href="./static/css/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>A. N. Mitra Memorial Lecture Series</title>
+  <link rel="stylesheet" href="./static/css/navbar.css">
+  <link rel="stylesheet" href="./static/css/home.css">
 </head>
 <body>
-    
     <div class="bg-color-layer"></div>
     <div class="background"></div>
     <nav class="navbar">
@@ -40,48 +40,66 @@
 
     <div style="padding-top: 60px;"></div>
 
-    <div class="hero">
+    <div class="hero anmitra">
         <!-- <div class="hero-image"> -->
             <!-- <img src="{% static 'images/anmitra2.png' %}" alt="Prof. A. N. Mitra"> -->
             <!-- <img src="/anmitra.png"  -->
         <!-- </div> -->
-        <div class="circle">
-            <img src="static/images/anmitra2.png" alt="Prof. A. N. Mitra">
-        </div>
-        <div class="hero-text">
-            <h1>A. N. Mitra Memorial Meeting and Lecture</h1>
-            <p style="font-size: 26px;">In the loving memory of Prof. A. N. Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
-            <p style="font-size: 40px; font-family: Lora;">April 14<sup>th</sup>-15<sup>th</sup>, 2025</p>
-            <div class="buttons">
-                <a href="./templates/schedule.html" class="type1">Meeting</a>
-                <a href="./templates/WittenLecture.html" class="type1">Lecture</a>
+        <!-- <div class="circle">
+            <img src="{% static 'images/anmitra.png' %}" alt="Prof. A. N. Mitra">
+        </div> -->
+        <div class="biggerContainer">
+            <!-- <div style="width: 40vw;">
+                <img src="{% static 'images/anmitra.png' %}" alt="Prof. A. N. Mitra">
+            </div> -->
+
+            <div id="fillerbox">
+                <!-- &nbsp; -->
+            </div>
+
+            <div class="hero-text">
+                <div style="height: 4vw; aspect-ratio: 1;"></div>
+                <h1>A. N. Mitra Memorial Meeting and Lecture</h1>
+                <div style="height: 1.5vw;"></div>
+
+                <p id="about-anmseries">In the loving memory of and as a tribute to the life and work of Prof. Asoke Nath Mitra, we are organizing this meeting and the second memorial lecture. Prof. Mitra's contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and have inspired many generations of physicists.</p>
+
+                <div style="height: 3.5vw;"></div>
+                <!-- <p id="date-event">April 14-15, 2025</p> -->
+                <p id="date-event">April 14<sup>th</sup>-15<sup>th</sup>, 2025</p>
+                <div style="width: 10vw;; display: inline-flex;"></div>
+                <div class="buttons" style="display: inline-flex; justify-content: space-between; align-content: right;">
+                    <a href="./templates/schedule.html" class="type2">Meeting</a>
+                    <a href="./templates/WittenLecture.html" class="type2">Lecture</a>
+                </div>
+                <div style="height: 2vw;"></div>
             </div>
         </div>
+
+            
     </div>
 
     <!-- To ensure proper gap between the above and below containers -->
     <div> &nbsp;</div> 
 
-    <div class="hero" style="
-        border-radius: 20px; 
-        background-color: rgba(40, 40, 40, 1); /*29, 29, 29, 0.5  85, 65, 86, 1*/
-        /*background: transparent;*/
-        padding-top: 60px;
-        padding-bottom: 60px;
-        padding-right: 50px;
-        ">
-        <div class="hero-text" style="color: white; vertical-align: top;">
-            <h1 style="font-size: 50px;"> 2<sup>nd</sup> A. N. Mitra Memorial Lecture</h1>
-            <p>In the loving memory of Professor Asoke Nath Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
 
-            <div class="buttons">
+    <div class="hero witten">
+        <div class="hero-text" style="color: white; vertical-align: top;">
+            <h1> 2<sup>nd</sup> A. N. Mitra Memorial Lecture</h1>
+
+            <p id="about-lecture">This memorial lecture will be delivered by Professor Edward Witten on the topic "A Background - Independent Algebra For Gravity". This is the second A. N. Mitra memorial lecture. The <a href="https://www.youtube.com/watch?v=4kn6BwdyA14">inaugural memorial lecture</a> was given by Prof. N. Panchapakesan on Apr 17, 2023, and was organized by the department of Physics, University of Delhi.</p>
+
+            <div class="buttons" id="learn-more-lec-button">
                 <a href="./templates/WittenLecture.html" style="margin-top: 3vw;" class="type2">Learn More</a>
                 <!-- <a href="/lecture" class="type1">Lecture</a> -->
             </div>
 
+            <div class="circleWitten" id="inside">
+                <a href="./templates/WittenLecture.html" title="Designed by Gayatri Misra"><img src="./static/images/lecturePoster.jpeg" alt="Professor Edward Witten"></a>
+            </div>
         </div>
-        <div class="circleWitten">
-            <a href="templates/WittenLecture.html"><img src="static/images/lecturePoster.jpeg" alt="Professor Edward Witten"></a>
+        <div class="circleWitten" id="outside">
+            <a href="./templates/WittenLecture.html" title="Designed by Gayatri Misra"><img src="./static/images/lecturePoster.jpeg" alt="Professor Edward Witten"></a>
         </div>
     </div>
 
@@ -91,10 +109,10 @@
         <!-- Footer -->
         <footer>
             <div class="footer-bottom">
-                <p>In the loving memory of Professor Asoke Nath Mitra.</p>
+                <p title="Designed by Ayush Ashray, Rajnish and Shivam">In the loving memory of Professor Asoke Nath Mitra.</p>
                 <!-- email llink -->
 
-                <p>For queries, contact <a href="mailto:aalok.misra@ph.iitr.ac.in" style="color: cyan;">aalok.misra@ph.iitr.ac.in</a>.</p>
+                <p>For queries, contact &nbsp;<a href="mailto:aalok.misra@ph.iitr.ac.in" style="color: cyan;"> aalok.misra@ph.iitr.ac.in</a>.</p>
                 <!-- <div class="footer-bottom-links">
                     <a href="templates/about.html">About</a>
                     <a href="templates/schedule.html">Events</a>
@@ -104,10 +122,5 @@
             </div>
         </footer>
     </div>
-
-    <script type="text/javascript">
-        // Get the value of site.baseurl in console log 
-        console.log("site.baseurl: ", "{{site.baseurl}}");
-    </script>
 </body>
 </html>
